RESOLVED FIXED282433
[JSC][armv7] Missing B3->Air atomics for armv7
https://bugs.webkit.org/show_bug.cgi?id=282433
Summary [JSC][armv7] Missing B3->Air atomics for armv7
Max Rottenkolber
Reported 2024-11-01 06:00:02 PDT
We need to add support for lowering B3 atomics to Air for armv7.
Attachments
EWS
Comment 1 2024-11-04 06:57:50 PST
Committed 286082@main (fb0137cc6ec2): <https://commits.webkit.org/286082@main> Reviewed commits have been landed. Closing PR #36042 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-11-04 06:58:14 PST
Note You need to log in before you can comment on or make changes to this bug.