[JSC][armv7] Support for lowering B3 atomics to Air for armv7 https://bugs.webkit.org/show_bug.cgi?id=282433

Reviewed by Justin Michaud.

Implements various atomic operations for OMG on armv7.

* Source/JavaScriptCore/assembler/MacroAssemblerARMv7.h:
(JSC::MacroAssemblerARMv7::loadAcq32):
(JSC::MacroAssemblerARMv7::loadAcq8):
(JSC::MacroAssemblerARMv7::loadAcq8SignedExtendTo32):
(JSC::MacroAssemblerARMv7::loadAcq16):
(JSC::MacroAssemblerARMv7::loadAcq16SignedExtendTo32):
(JSC::MacroAssemblerARMv7::storeRel32):
(JSC::MacroAssemblerARMv7::storeRel8):
(JSC::MacroAssemblerARMv7::storeRel16):
* Source/JavaScriptCore/b3/B3LowerInt64.cpp:
* Source/JavaScriptCore/b3/B3LowerToAir32_64.cpp:
* Source/JavaScriptCore/b3/air/AirOpcode.opcodes:
* Source/JavaScriptCore/b3/testb3_failingArmV7Tests.inc:

Canonical link: https://commits.webkit.org/286082@main